# via-core

./: .coderabbit.yaml  .dockerignore  .envrc  .gitignore  .gitmodules  .prettierignore  AGENTS.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  deny.toml  docker-compose-cpu-runner.yml  docker-compose-gpu-runner-cuda-12-0.yml  docker-compose-gpu-runner.yml  docker-compose-via-btc-explorer.yml  docker-compose-via.yml  docker-compose.yml  flake.nix  justfile  package.json  run-celestia.sh  rust-toolchain  withdrawal flow
core/lib/celestia_client/: Cargo.toml
core/lib/celestia_client/src/: lib.rs  wiring_layer.rs
core/lib/via_btc_client/: .gitignore  Cargo.toml  DEV.md
core/lib/via_btc_client/examples/: bitcoin_client_example.rs  bootstrap.rs  data_inscription_example.rs  deposit.rs  deposit_opreturn.rs  fee_history.rs  fee_rate.rs  indexer_init_example.rs  inscriber.rs  parse_bootstrap.rs  propose_new_bridge.rs  tx_with_opreturn.rs  upgrade_inscription_parsing.rs  upgrade_system_contracts.rs  verify_batch.rs
core/lib/via_btc_client/resources/: docker-compose-btc.yml
core/lib/via_btc_client/src/: lib.rs  metrics.rs  regtest.rs  traits.rs  types.rs  utils.rs
core/lib/via_btc_client/tests/: deposit_integration_test.rs  deposit_test.rs  deposit_utils.rs  docker-compose-btc-template.yml  docker-compose-btc.yml  use std::str::FromStr;.rs
core/lib/via_btc_send_common/: Cargo.toml
core/lib/via_btc_send_common/src/: lib.rs
core/lib/via_btc_watch_common/: Cargo.toml
core/lib/via_btc_watch_common/src/: dal.rs  governance.rs  lib.rs  orchestrator.rs  role.rs  system_wallet.rs  utils.rs
core/lib/via_consensus/: Cargo.toml  README.md
core/lib/via_consensus/src/: consensus.rs
core/lib/via_da_clients/: AGENTS.md  Cargo.toml  README.md
core/lib/via_da_clients/src/: common.rs  lib.rs  wiring_layer.rs
core/lib/via_da_dispatcher/: Cargo.toml
core/lib/via_da_dispatcher/src/: blob.rs  lib.rs  utils.rs
core/lib/via_musig2/: Cargo.toml
core/lib/via_musig2/examples/: coordinator.rs  key_generation_setup.rs  withdrawal.rs
core/lib/via_musig2/src/: lib.rs
core/lib/via_reorg/: AGENTS.md  Cargo.toml
core/lib/via_reorg/src/: lib.rs
core/lib/via_test_utils/: Cargo.toml
core/lib/via_test_utils/src/: utils.rs
core/lib/via_validation/: Cargo.toml
core/lib/via_validation/src/: block_header.rs  crypto.rs  errors.rs  l1_data_fetcher.rs  lib.rs  proof.rs  public_inputs.rs  types.rs  utils.rs  verification.rs
core/lib/via_withdrawal_client/: Cargo.toml
core/lib/via_withdrawal_client/examples/: withdraw.rs
core/lib/via_withdrawal_client/src/: client.rs  constant.rs  lib.rs  pubdata.rs  types.rs  withdraw.rs  withdraw_validation.rs
core/lib/zksync_core_leftovers/: Cargo.toml
core/lib/zksync_core_leftovers/src/: lib.rs
core/node/node_framework/: Cargo.toml
core/node/via_block_reverter/: Cargo.toml  README.md
core/node/via_block_reverter/src/: lib.rs  tests.rs
core/node/via_btc_sender/: AGENTS.md  Cargo.toml
core/node/via_btc_sender/src/: aggregated_operations.rs  aggregator.rs  btc_inscription_aggregator.rs  btc_inscription_manager.rs  btc_tx_manager.rs  btc_vote_inscription.rs  config.rs  lib.rs  metrics.rs  publish_criterion.rs
core/node/via_btc_watch/: AGENTS.md  Cargo.toml
core/node/via_btc_watch/src/: lib.rs  metrics.rs  storage.rs
core/node/via_consistency_checker/: Cargo.toml  README.md
core/node/via_consistency_checker/src/: lib.rs
core/node/via_fee_model/: Cargo.toml
core/node/via_fee_model/src/: lib.rs  metrics.rs
core/node/via_main_node_reorg_detector/: AGENTS.md  Cargo.toml
core/node/via_main_node_reorg_detector/src/: compare.rs  lib.rs  metrics.rs  tests.rs
core/node/via_state_keeper/: Cargo.toml
core/node/via_state_keeper/src/: keeper.rs  lib.rs  mempool_actor.rs  metrics.rs  types.rs
core/node/via_zk_verifier/: Cargo.toml
core/node/via_zk_verifier/src/: lib.rs
via_indexer/node/via_indexer_storage_init/: Cargo.toml  README.md
via_indexer/node/via_indexer_storage_init/src/: lib.rs
via_verifier/lib/verifier_dal/: Cargo.toml
via_verifier/lib/verifier_dal/.sqlx/: query-02cdc7bbdef8e444ecf1a0b1e38c33775638e8db682a73672a472e1fa00e475f.json  query-033ee90b941f063eab9355a09d3b7863bb05aa4d3ab252ccfe2a7590daf85052.json  query-06dec80580784fe9d2e5655a1ceb707dcaa591d5befb4063d1bc11a79a5ce26f.json  query-07378ec8e1eba856fda3b7b662a13f7f51eca817fa5214f8fea29af62133e9bb.json  query-077d58ffcf7f6fd19031433b17b01ca48c831b80daa47d4ad9ca94bb5f03b03d.json  query-0a58f94e29a1024457e19467bbc90fb2bea8deb917c62043817199fdd525c340.json  query-0abd08c2da363c61fa11d2dbc2100ffa95e4e0af138a5ac2685840d91651ac3c.json  query-0c3d4d93a743fe485671311a5850e7009614a21b8fe64d853186c1cdecfe978d.json  query-0c5bd3ae3302c533f58882ff2a772b11eb2783f962914b676068acad405e4fc0.json  query-0c9887257418aac9420c4fe0c5b2677966979e696771981dc2054997b673f28f.json  query-0fbe2a42dcd76aab90612f82ec1955ee8b5f997c5d7fd052a51b30ec5a45e77a.json  query-110825e736943e4ef68110e8d7af3af3edce16051e8987a27ea207bfe9b65502.json  query-112addcea4abb0abdb98f979585e424b9a7ac6ad732377647899472fa4fd0993.json  query-175807bfd3b6618ab60ede8cb56ddc773bf8e85190606d1b6f2203ce8b5aba2e.json  query-17892bb5a9515da87239d8766ee37b409065b4b5ed1aca4bde2f6408f616adff.json  query-1874e600bf51b354e11aa5c5a4106ef4c363e74c1fe6355f1a1666ca771fd28e.json  query-1b29ab283bdb633f4fde468276e7b18e9aa51472da492cd045cb71749de4e37c.json  query-1be690671ee774bd289566de55ed078403e358bc04cf6e6ee7c2c93119d1b908.json  query-1c5df79bec4f47dc94562f5d27fbeeda15ca4daf5620896833c3cdd4c909a156.json  query-1f4c5d78b74f6a136d9e213461a8392bc6555e6f9889886faf74c1841fa91886.json  query-2082d20e3b547a7385c174892d96857119c57c7ff5194a546d24fec0e3cf3059.json  (+140 more)
via_verifier/lib/via_da_client/: AGENTS.md  Cargo.toml
via_verifier/lib/via_musig2/: Cargo.toml
via_verifier/lib/via_verification/: Cargo.toml
via_verifier/lib/via_verifier_types/: Cargo.toml
via_verifier/lib/via_withdrawal_client/: Cargo.toml
via_verifier/node/via_btc_sender/: AGENTS.md  Cargo.toml  rustfmt.toml
(+976 files in other folders)
