[package]
name = "zksync_celestia_client"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
celestia-types.workspace = true
celestia-rpc.workspace = true
anyhow.workspace = true
async-trait.workspace = true
zksync_types.workspace = true
zksync_config.workspace = true
serde = { workspace = true, features = ["derive"] }

zksync_object_store.workspace = true
zksync_da_client.workspace = true
zksync_node_framework.workspace = true
zksync_env_config.workspace = true

[dev-dependencies]
assert_matches.workspace = true
tokio = { workspace = true, features = ["full"] }
pretty_assertions.workspace = true
