[package]
name = "via_btc_client"
description = "Via Network Bitcoin Inscription Standard Implementation"
version.workspace = true
edition.workspace = true
authors = ["Via Network"]
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
vise.workspace = true
zksync_types.workspace = true
zksync_config.workspace = true
zksync_basic_types.workspace = true
zksync_object_store.workspace = true


thiserror.workspace = true
async-trait.workspace = true
lazy_static.workspace = true
tokio.workspace = true
futures.workspace = true
bitcoin.workspace = true
bitcoincore-rpc.workspace = true
rand.workspace = true
hex.workspace = true
secp256k1 = "0.29.0"
reqwest = "0.12.5"
serde_json.workspace = true
inquire = { version = "0.7.5", optional = true }
anyhow.workspace = true
serde.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
bincode = "1.3"
musig2 = "0.2.0"


[dev-dependencies]
mockall = "0.13.0"
musig2 = "0.2.0"
secp256k1_musig2 = { package = "secp256k1", version = "0.30.0", features = [
    "rand",
    "hashes",
] }

[features]
regtest = []

[[example]]
name = "indexer"
path = "examples/indexer_init_example.rs"
required-features = ["regtest"]

[[example]]
name = "data_inscription_example"
path = "examples/data_inscription_example.rs"
required-features = ["inquire"]

[[example]]
name = "inscriber"
path = "examples/inscriber.rs"

[[example]]
name = "bootstrap"
path = "examples/bootstrap.rs"

[[example]]
name = "verify_batch"
path = "examples/verify_batch.rs"

[[example]]
name = "fee_history"
path = "examples/fee_history.rs"

[[example]]
name = "deposit_opreturn"
path = "examples/deposit_opreturn.rs"

[[example]]
name = "upgrade_system_contracts"
path = "examples/upgrade_system_contracts.rs"

[[example]]
name = "upgrade_inscription_parsing"
path = "examples/upgrade_inscription_parsing.rs"

[[example]]
name = "propose_new_bridge"
path = "examples/propose_new_bridge.rs"
