[package]
name = "via_btc_send_common"
description = "Common helpers for VIA BTC sender logic shared by sequencer and verifier"
version.workspace = true
edition.workspace = true
authors = ["VIA Protocol Team"]
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bitcoin.workspace = true
bincode = "1"
chrono.workspace = true
via_btc_client.workspace = true


