[package]
name = "via_btc_watch_common"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true

via_btc_client.workspace = true
zksync_types.workspace = true
zksync_config.workspace = true
tokio.workspace = true


