[package]
name = "via_consensus"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
tokio.workspace = true
anyhow.workspace = true
async-trait.workspace = true
tracing.workspace = true
rand.workspace = true
