[package]
name = "via_musig2"
description = "Via Network Musig2 Wrapper"
version.workspace = true
edition.workspace = true
authors = ["Via Network"]
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
rand.workspace = true
hex.workspace = true
bitcoin = { version = "0.32.2", features = ["serde"] }
musig2 = "0.2.0"
secp256k1_musig2 = { package = "secp256k1", version = "0.30.0", features = ["rand"]}
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }





[[example]]
name = "key_generation_setup"
path = "examples/key_generation_setup.rs"


[[example]]
name = "withdrawal"
path = "examples/withdrawal.rs"


