[package]
name = "via-validator-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
circuit_definitions = {git = "https://github.com/matter-labs/zksync-protocol.git", tag = "v0.150.16"}

zksync_types.workspace = true

hex = "0.4.3"
serde_json = "1.0.133"
serde = {version = "1", features = ["derive"]}
clap = { version = "4.2.4", features = ["derive"] }
anyhow = "*"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.41.1", features = ["full"] }
ethers = {version = "1"}
sha3 = "*"
once_cell = "1.7"
primitive-types = "0.12.2"
tracing = "0.1"
tracing-subscriber = "0.3.18"
thiserror = "1.0"
async-trait = "0.1.83"

[lib]
name = "via_validator"
path = "src/lib.rs"
