[package]
name = "via-proof-verfication"
version = "0.1.0"
edition = "2021"

[dependencies]
circuit_definitions = {git = "https://github.com/matter-labs/zksync-protocol.git", tag = "v0.150.16"}

zksync_types.workspace = true

hex.workspace = true
serde_json.workspace = true
serde.workspace = true
clap = { workspace = true, features = ["derive"]}
anyhow.workspace = true
reqwest = { workspace = true, features = ["json"]}
tokio.workspace = true
ethers = {version = "1"}
sha3.workspace = true
once_cell.workspace = true
primitive-types = "0.12.2"
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
async-trait.workspace = true

