[package]
name = "zksync_core_leftovers"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
zksync_dal.workspace = true
zksync_config.workspace = true
zksync_protobuf_config.workspace = true
zksync_utils.workspace = true
zksync_contracts.workspace = true
zksync_system_constants.workspace = true
zksync_eth_client.workspace = true
zksync_eth_signer.workspace = true
zksync_l1_contract_interface.workspace = true
zksync_mempool.workspace = true
zksync_circuit_breaker.workspace = true
zksync_storage.workspace = true
zksync_tee_verifier.workspace = true
zksync_merkle_tree.workspace = true
zksync_mini_merkle_tree.workspace = true
prometheus_exporter.workspace = true
zksync_prover_interface.workspace = true
zksync_queued_job_processor.workspace = true
zksync_web3_decl = { workspace = true, features = ["server"] }
zksync_object_store.workspace = true
zksync_health_check.workspace = true
vlog.workspace = true
zksync_eth_watch.workspace = true
zksync_shared_metrics.workspace = true
zksync_proof_data_handler.workspace = true
zksync_commitment_generator.workspace = true
zksync_house_keeper.workspace = true
zksync_node_genesis.workspace = true
zksync_eth_sender.workspace = true
zksync_da_dispatcher.workspace = true
zksync_da_client.workspace = true
zksync_default_da_clients.workspace = true
zksync_node_fee_model.workspace = true
zksync_state_keeper.workspace = true
zksync_metadata_calculator.workspace = true
zksync_node_sync.workspace = true
zksync_node_consensus.workspace = true
zksync_contract_verification_server.workspace = true
zksync_node_api_server.workspace = true
zksync_tee_verifier_input_producer.workspace = true
multivm.workspace = true

# Consensus dependenices
zksync_concurrency.workspace = true
zksync_consensus_crypto.workspace = true
zksync_consensus_network.workspace = true
zksync_consensus_roles.workspace = true
zksync_consensus_storage.workspace = true
zksync_consensus_executor.workspace = true
zksync_consensus_bft.workspace = true
zksync_consensus_utils.workspace = true
zksync_protobuf.workspace = true
zksync_node_genesis.workspace = true

anyhow.workspace = true
tokio = { workspace = true, features = ["time"] }
serde_yaml.workspace = true
ctrlc.workspace = true
