[package]
name = "zksync_node_framework"
description = "ZKsync node framework"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
zksync_node_framework_derive.workspace = true
zksync_vlog.workspace = true
zksync_types.workspace = true
zksync_health_check.workspace = true
zksync_dal.workspace = true
zksync_db_connection.workspace = true
zksync_config.workspace = true
zksync_state.workspace = true
zksync_object_store.workspace = true
zksync_storage.workspace = true
zksync_eth_client.workspace = true
zksync_contracts.workspace = true
zksync_web3_decl.workspace = true
zksync_utils.workspace = true
zksync_circuit_breaker.workspace = true
zksync_concurrency.workspace = true
zksync_eth_watch.workspace = true
zksync_proof_data_handler.workspace = true
zksync_commitment_generator.workspace = true
zksync_house_keeper.workspace = true
zksync_node_fee_model.workspace = true
zksync_eth_sender.workspace = true
zksync_da_client.workspace = true
zksync_da_clients.workspace = true
zksync_da_dispatcher.workspace = true
zksync_block_reverter.workspace = true
zksync_vm_executor.workspace = true
zksync_state_keeper.workspace = true
zksync_consistency_checker.workspace = true
zksync_metadata_calculator.workspace = true
zksync_bin_metadata.workspace = true
zksync_node_sync.workspace = true
zksync_node_api_server.workspace = true
zksync_node_consensus.workspace = true
zksync_contract_verification_server.workspace = true
zksync_queued_job_processor.workspace = true
zksync_reorg_detector.workspace = true
zksync_vm_runner.workspace = true
zksync_node_db_pruner.workspace = true
zksync_base_token_adjuster.workspace = true
zksync_node_storage_init.workspace = true
zksync_external_price_api.workspace = true
zksync_external_proof_integration_api.workspace = true
zksync_logs_bloom_backfill.workspace = true
zksync_shared_metrics.workspace = true

# Via dependencies
via_btc_watch.workspace = true
via_btc_client.workspace = true
via_btc_sender.workspace = true
via_consistency_checker.workspace = true
via_fee_model.workspace = true
via_da_dispatcher.workspace = true
via_state_keeper.workspace = true
via_main_node_reorg_detector.workspace = true
via_verifier_coordinator.workspace = true
via_withdrawal_client.workspace = true
via_verifier_dal.workspace = true
via_zk_verifier.workspace = true
via_verifier_btc_watch.workspace = true
via_verifier_btc_sender.workspace = true
via_musig2.workspace = true
via_verifier_storage_init.workspace = true
via_verifier_block_reverter.workspace = true
via_verifier_reorg_detector.workspace = true
via_node_storage_init.workspace = true
via_indexer_storage_init.workspace = true

via_indexer_dal.workspace = true
via_indexer.workspace = true

pin-project-lite.workspace = true
tracing.workspace = true
thiserror.workspace = true
async-trait.workspace = true
futures.workspace = true
anyhow.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["rt"] }
ctrlc.workspace = true
semver.workspace = true

[dev-dependencies]
assert_matches.workspace = true
# For running UI tests for proc macro
trybuild.workspace = true
