[package]
name = "via_block_reverter"
description = "Via block reverter library"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
zksync_types.workspace = true
zksync_dal.workspace = true
zksync_object_store.workspace = true
zksync_storage.workspace = true
zksync_state.workspace = true
zksync_merkle_tree.workspace = true

anyhow.workspace = true
futures.workspace = true
tokio = { workspace = true, features = ["time", "fs"] }
tracing.workspace = true

[dev-dependencies]
assert_matches.workspace = true
async-trait.workspace = true
tempfile.workspace = true
test-casing.workspace = true
