[package]
name = "via_btc_sender"
description = "VIA Bitcoin Sender"
version.workspace = true
edition.workspace = true
authors = [ "VIA Protocol Team"]
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
via_btc_client.workspace = true
zksync_dal.workspace = true

tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tracing.workspace = true

[dev-dependencies]
