[package]
name = "via_btc_watch"
description = "VIA Bitcoin watcher"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
vise.workspace = true
via_btc_client.workspace = true
via_consensus.workspace = true
zksync_shared_metrics.workspace = true
zksync_dal.workspace = true
zksync_types.workspace = true
zksync_config.workspace = true
zksync_contracts.workspace = true
zksync_node_fee_model.workspace = true

tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tracing.workspace = true
sqlx.workspace = true

[dev-dependencies]
via_test_utils.workspace = true
