[package]
name = "via_consistency_checker"
description = "Consistency checker for VIA network"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
zksync_contracts.workspace = true
zksync_dal.workspace = true
zksync_eth_client.workspace = true
zksync_eth_sender.workspace = true
zksync_da_client.workspace = true
zksync_health_check.workspace = true
zksync_l1_contract_interface.workspace = true
zksync_shared_metrics.workspace = true
zksync_types.workspace = true
via_btc_client.workspace = true
bitcoin = { version = "0.32.2", features = ["serde"] }
bitcoincore-rpc = "0.19.0"

anyhow.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["time"] }
tracing.workspace = true
thiserror.workspace = true

[dev-dependencies]
assert_matches.workspace = true
test-casing.workspace = true
chrono.workspace = true
once_cell.workspace = true

zksync_node_genesis.workspace = true
zksync_node_test_utils.workspace = true
zksync_config.workspace = true
