[package]
name = "via_fee_model"
description = "Via fee model"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
vise.workspace = true
zksync_types.workspace = true
zksync_config.workspace = true
zksync_utils.workspace = true
zksync_node_fee_model.workspace = true
via_btc_client.workspace = true
zksync_da_client.workspace = true

tokio = { workspace = true, features = ["full"] }
futures.workspace = true
anyhow.workspace = true
async-trait.workspace = true
tracing.workspace = true

[dev-dependencies]
test-casing.workspace = true
zksync_node_test_utils.workspace = true
mockall = "0.13.0"
