[package]
name = "via_state_keeper"
description = "Via state keeper"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true


[dependencies]
vise.workspace = true
zksync_multivm.workspace = true
zksync_types.workspace = true
zksync_dal.workspace = true
zksync_health_check.workspace = true
zksync_state.workspace = true
zksync_storage.workspace = true
zksync_mempool.workspace = true
via_mempool.workspace = true
zksync_shared_metrics.workspace = true
zksync_config.workspace = true
zksync_contracts.workspace = true
zksync_protobuf.workspace = true
zksync_node_genesis.workspace = true
zksync_node_test_utils.workspace = true
zksync_vm_executor.workspace = true
zksync_system_constants.workspace = true
via_fee_model.workspace = true

anyhow.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["time"] }
thiserror.workspace = true
tracing.workspace = true
futures.workspace = true
once_cell.workspace = true
itertools.workspace = true
serde.workspace = true
hex.workspace = true

[dev-dependencies]
assert_matches.workspace = true
rand.workspace = true
tempfile.workspace = true
test-casing.workspace = true
futures.workspace = true
via_btc_client.workspace = true

zksync_system_constants.workspace = true
