[package]
name = "via_zk_verifier"
description = "VIA zk verifier"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
vise.workspace = true
via_btc_client.workspace = true
zksync_shared_metrics.workspace = true
zksync_dal.workspace = true
zksync_types.workspace = true
zksync_config.workspace = true
zksync_da_client.workspace = true
zksync_prover_interface.workspace = true

tokio.workspace = true
anyhow.workspace = true
bincode.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tracing.workspace = true
sqlx.workspace = true
serde.workspace = true

[dev-dependencies]
