[package]
name = "via_da_client"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
zksync_types.workspace = true
zksync_utils.workspace = true

byteorder = "1.4"

[dev-dependencies]
hex.workspace = true
rand = "0.8"

