[package]
name = "via_musig2"
description = "Via Network Musig2 Wrapper"
version.workspace = true
edition.workspace = true
authors = ["Via Network"]
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
rand.workspace = true
hex.workspace = true
via_btc_client.workspace = true
via_verifier_types.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
serde.workspace = true
reqwest.workspace = true
bitcoincore-rpc = "0.19.0"
bitcoin = { version = "0.32.2", features = ["serde"] }
musig2 = "0.2.0"
secp256k1_musig2 = { package = "secp256k1", version = "0.30.0", features = [
    "rand",
    "hashes",
] }
tokio = { version = "1.0", features = ["full"] }
axum = "0.6"
uuid = { version = "1.3", features = ["v4"] }
hyper = { version = "0.14", features = ["full"] }
base64 = "0.21"

byteorder = "1.4"
bincode = "1.3"

[dev-dependencies]
via_withdrawal_client.workspace = true
zksync_dal.workspace = true
dotenv = "0.15"
via_da_clients.workspace = true
async-trait.workspace = true
zksync_config.workspace = true
mockall = "0.13.0"
bitcoincore-rpc = "0.19.0"
rand = "0.8"

[[example]]
name = "key_generation_setup"
path = "examples/key_generation_setup.rs"


[[example]]
name = "withdrawal"
path = "examples/withdrawal.rs"


[[example]]
name = "coordinator"
path = "examples/coordinator.rs"
