[package]
name = "via_verification"
version = "0.1.0"
edition = "2021"

[dependencies]
circuit_definitions = "=0.150.18"

# circuit_definitions = {git = "https://github.com/matter-labs/zksync-protocol.git", tag = "v0.150.5"}

zksync_types.workspace = true

hex.workspace = true
serde_json.workspace = true
serde.workspace = true
clap = { workspace = true, features = ["derive"]}
anyhow.workspace = true
reqwest = { workspace = true, features = ["json"]}
tokio.workspace = true
ethers = {version = "1"}
sha3.workspace = true
once_cell.workspace = true
primitive-types = "0.12.2"
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
async-trait.workspace = true

[dev-dependencies]
zksync_da_client.workspace = true
bincode.workspace = true
via_da_clients.workspace = true
zksync_config.workspace = true

[[example]]
name = "zk"
path = "examples/zk.rs"
