[package]
name = "via_verifier_types"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde.workspace = true
via_btc_client.workspace = true
zksync_types.workspace = true
bitcoin = { version = "0.32.2", features = ["serde"] }
bincode = "1.3"
anyhow.workspace = true
indexmap = "2.2"
