[package]
name = "via_withdrawal_client"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
hex.workspace = true
anyhow.workspace = true
zksync_basic_types.workspace = true
zksync_da_client.workspace = true
zksync_config.workspace = true
zksync_types.workspace = true
zksync_utils.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
via_btc_client.workspace = true
via_da_client.workspace = true

bitcoin = { version = "0.32.2", features = ["serde"] }
serde.workspace = true
via_verifier_types.workspace = true

byteorder = "1.4"
bincode = "1.3"

[dev-dependencies]
zksync_dal.workspace = true
dotenv = "0.15"
via_da_clients.workspace = true
async-trait.workspace = true
mockall = "0.13.0"
bitcoincore-rpc = "0.19.0"

[[example]]
name = "withdraw"
path = "examples/withdraw.rs"
