[package]
name = "via_withdrawal_client"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
hex.workspace = true
anyhow.workspace = true
zksync_basic_types.workspace = true
zksync_da_client.workspace = true
zksync_config.workspace = true
zksync_types.workspace = true
zksync_utils.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
via_btc_client.workspace = true
via_da_client.workspace = true
zksync_web3_decl.workspace = true

bitcoin.workspace = true
serde.workspace = true
serde_json.workspace = true
via_verifier_types.workspace = true
ethers = "2.0"

[dev-dependencies]
dotenv = "0.15"
zksync_dal.workspace = true
via_da_clients.workspace = true
hex = "0.4"

[[example]]
name = "withdraw"
path = "examples/withdraw.rs"
